# libql

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  libql.pc.in
examples/: libqlsp.c  libqlsp.h
src/: Makefile.am  benchmark.c  libql-arm.S  libql-assembly-arm.S  libql-assembly-i386.S  libql-assembly-intel.S  libql-assembly-intel32.S  libql-assembly-intel64.S  libql-assembly-x86_64.S  libql-assembly.c  libql-i386.S  libql-internal.h  libql-linux-x86_64.S  libql-pthread.c  libql-setjmp-arm.S  libql-setjmp-intel.S  libql-setjmp-mips.S  libql-setjmp.c  libql-ucontext.c  libql-x86_64.S  libql.c  libql.h  test.c
tests/: Makefile.am  benchmark.c  test.c
